<resources>
    <string name="appName">Craft Your Feast</string>
    <string name="appYear">\u00A9 2025</string>
    <string name="open_sidebar">open sidebar</string>
    <string name="close_sidebar">close sidebar</string>
    <string name="helloUser">Hello! User</string>
    <string name="profile">Profile</string>
    <string name="orderHis">Order History</string>
    <string name="contactUs">Contact Us</string>
    <string name="termsAndCon">Terms and Condition</string>
    <string name="logOut">Log Out</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="aboutUs">About us</string>
    <string name="order">Order</string>
    <string name="save">Save</string>
    <string name="savePass">Save Password</string>
    <string name="logIn">LOG IN</string>
    <string name="signUp">SIGNUP</string>
    <string name="guest">GUEST</string>
    <string name="smallLogIn">Log in</string>
    <string name="smallSignUp">Sign up</string>
    <string name="smallGuest">Guest</string>
    <string name="craftYourFeast">Craft Your Feast</string>
    <string name="kinse">15</string>
    <string name="hello">Hello,</string>
    <string name="Welcome">Welcome,</string>
    <string name="user">User</string>
    <string name="pickup">Pick Up:</string>
    <string name="editMeal">Edit Meal</string>
    <string name="admin">Admin</string>
    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>
    <string name="accounts">Accounts</string>
    <string name="account">Account</string>
    <string name="mealQuantity">Meal Quantity:</string>
    <string name="x">x</string>
    <string name="meals">Meals</string>
    <string name="customerName">Customer Name:</string>
    <string name="adminContactNumber">Contact Number:</string>
    <string name="customerEmail">Customer Email:</string>
    <string name="dateTime">Date &amp; Time:</string>
    <string name="totalPrice">Total Price:</string>
    <string name="status">Status:</string>
    <string name="deleteAll">Delete all</string>
    <string name="seeOrder">See Order</string>
    <string name="craftNow">CRAFT NOW</string>
    <string name="meal">Meal:</string>
    <string name="sampleName">Migz Reyes</string>
    <string name="sampleContact">09948751671</string>
    <string name="sampleEmail">migz@gmail.com</string>
    <string name="sampleDate">April 25, 2025, 12:00 AM</string>
    <string name="samplePrice">350</string>
    <string name="sampleStatus">Processing</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="storeManagement">Store Management</string>
    <string name="siteManagement">Site Management</string>
    <string name="addANewMeal">+ Add a New Meal</string>
    <string name="image">Image</string>
    <string name="chooseFile">Choose File</string>
    <string name="items">Items</string>
    <string name="create">Create</string>
    <string name="mealName">Meal Name</string>
    <string name="filterPrice">Price</string>
    <string name="category">Category</string>
    <string name="selectCategory">Select Category</string>
    <string name="add">Add</string>
    <string name="userList">User List</string>
    <string name="addUser">Add User</string>
    <string name="ban">Ban:</string>
    <string name="banNoColon">Ban</string>
    <string name="role">Role:</string>
    <string name="roleNoColon">Role</string>
    <string name="banTrue">True</string>
    <string name="banFalse">False</string>
    <string name="editUser">Edit User</string>
    <string name="editAddon">Edit addon</string>
    <string name="filterStatus">Status</string>
    <string name="craft">Craft</string>
    <string name="saveChangesToYourAccount">Save changes to your account information?</string>
    <string name="deleteAccount">Delete account</string>
    <string name="thisActionCanNotBeUndone">This action cannot be undone. Are you sure you want to continue?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="areYouSureYouWantToLogOut">Are you sure you want to log out?</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="makeSureAllTheInformationIsCorrect">Make sure all the information is correct</string>
    <string name="proceed">Proceed</string>
    <string name="readyIn">Ready in</string>
    <string name="preparingYourOder">Preparing your order</string>
    <string name="whenItsReady">When it is ready, your order will be ready for pick–up</string>
    <string name="areYouSureYouWantToCancelTheOrder">Are you sure you want to cancel the order?</string>
    <string name="yourResponseIsImportantToUs">Your response is important to us! If you want to give us some much–appreciated feedback you may reach us at:</string>
    <string name="contactSupport">Contact Support</string>
    <string name="contactNumber">Contact Number</string>
    <string name="contactNumberHint">+63 9XX–XXX–XXXX</string>
    <string name="continueAs">Continue as</string>
    <string name="yourOwnMeal">Your own meal</string>
    <string name="includedFees">(incl. fees)</string>
    <string name="placeOrder">PLACE ORDER</string>
    <string name="contactNumberIsRequired">Contact number is required</string>
    <string name="standardTime">25–35 mins</string>
    <string name="priorityTime">10–15 mins</string>
    <string name="mealInProgressTime">10–5 mins</string>
    <string name="mealInProgress">Meal in progress</string>
    <string name="generalMealTime">15 mins</string>
    <string name="zero">0</string>
    <string name="scheduled">Scheduled</string>
    <string name="yourOrderIsProcessing">Your order is processing</string>
    <string name="yourOrderIsCurrently">Your order is currently being processed and will be ready for pick–up once completed</string>
    <string name="orderIsReady">Order is ready</string>
    <string name="yourOrderIsReady">Your order is ready for pick–up</string>
    <string name="ready">Ready!</string>
    <string name="setStatus">Set Status</string>
    <string name="capsStatus">Status</string>
    <string name="yourCartIsEmpty">Your cart is empty :( Order Now!</string>
    <string name="pleaseChooseAnAddon">Please choose an addon</string>
    <string name="sampleDay">1</string>
    <string name="sampleMonth">Jan</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="sampleDayMonday">Monday</string>
    <string name="sampleHour">06:00</string>
    <string name="sampleMinute">06:15</string>
    <string name="timePM">PM</string>
    <string name="timeAM">AM</string>
    <string name="scheduledDate">Select a date and time</string>
    <string name="change">Change</string>
    <string name="addMoreItems">+ Add More Items</string>
    <string name="welcomeToCraftYourFeast">Welcome to Craft Your Feast:</string>
    <string name="mixMatchMunch">Mix, Match, Munch!</string>
    <string name="aboutUsIntro1">
        Your go–to destination for a fully customizable and satisfying dining experience!
        At Craft Your Feast, we believe food should be an adventure, and we\’re here to make every
        meal exciting, convenient, and delicious.</string>
    <string name="ourStory">Our Story</string>
    <string name="aboutUsIntro2">
        Craft Your Feast was born from a passion for creating meals that are not only visually
        appealing but also made with fresh, high–quality ingredients. We bring a new twist to bento–style
        dining, allowing you to mix and match your favorite flavors, ensuring a meal tailored to your taste.
        Whether you\'re a food lover or a picky eater, we\’ve got something special for you!</string>
    <string name="ourMission">Our Mission</string>
    <string name="aboutUsIntro3">
        We aim to provide a delightful, personalized meal experience while maintaining the highest standards
        of hygiene, freshness, and customer service. Through innovation and integrity, we strive to bring you
        mouthwatering, well–balanced meals that fit your preferences and lifestyle.</string>
    <string name="findUs">Find us</string>
    <string name="aboutUsLoc">Visit us! We\'re located at STI College, Rosario, Cavite</string>
    <string name="emailCYF">craftyourfeast@gmail.com</string>
    <string name="phoneNumberCYF">0994–6456–114</string>
    <string name="connectAndFollow">Connect &amp; Follow</string>
    <string name="personalDetail">Personal Details</string>
    <string name="verifyEmail">Verify email</string>
    <string name="thisIsHowWeWillAddressYou">This is how we will address you</string>
    <string name="changingPassword">Changing password?</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="priorityPickUp">Priority Pick up</string>
    <string name="standardPickUp">Standard Pick up</string>
    <string name="scheduledPickUp">Scheduled Pick up</string>
    <string name="facebookCYF">craft.yf</string>
    <string name="facebook">Facebook</string>
    <string name="instagramCYF">craft.yf</string>
    <string name="instagram">Instagram</string>
    <string name="activeOrders">Active Orders</string>
    <string name="pastOrders">Past Orders</string>
    <string name="dateDays">1</string>
    <string name="dateMonth">Jan</string>
    <string name="dash">–</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="year">2025</string>
    <string name="orderNo">Order#:</string>
    <string name="orderNoSample">1</string>
    <string name="orderHisMain">Main: </string>
    <string name="orderHisSides">Sides: </string>
    <string name="orderHisSauce">Sauce: </string>
    <string name="orderHisDessert">Dessert: </string>
    <string name="orderHisDrinks">Drinks: </string>
    <string name="orderHisPickUp">Pick Up: </string>
    <string name="orderHisPayment">Payment: </string>
    <string name="orderHisJapFruitCake">Jap. Fruit Sandwich</string>
    <string name="socialMedia">Social Media</string>
    <string name="locatedAt">Located at</string>
    <string name="sampleQuantity">1x</string>
    <string name="locationCYF">CV55+2F3, STI Bldg, Gen. Trias Dr, Rosario, 4106 Cavite</string>
    <string name="checkOut">CHECK OUT</string>
    <string name="smallCheckOut">Check out</string>
    <string name="emailHint">name@example.com</string>
    <string name="usernameHint">username</string>
    <string name="passwordHint">min. 8 characters</string>
    <string name="passwordStrength">Password Strength</string>
    <string name="atLeastEightCharacters">At least 8 characters</string>
    <string name="makeSureWeCanReachYouAtYourNewEmail">Make sure we can reach you at your new email</string>
    <string name="ifYouChangeYourPhoneNumber">If you change your phone number, we will take you through a verification process at checkout the next time you order.</string>
    <string name="password">Password</string>
    <string name="passwordColon">Password:</string>
    <string name="passwordSample">************</string>
    <string name="email">Email</string>
    <string name="emailColon">Email:</string>
    <string name="logIntoYourAccount">Log into \nyour account</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="one">1</string>
    <string name="minusSign">–</string>
    <string name="plusSign">+</string>
    <string name="edit">Edit</string>
    <string name="pesoSign">\u20B1</string>
    <string name="ten">10.00</string>
    <string name="chickenKaraage">Chicken Karaage</string>
</resources>