<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/addonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/chickenKaraage"
        android:textColor="@color/greyLetters"
        android:fontFamily="@font/inter_18pt_regular"/>


    <TextView
        android:id="@+id/addonQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textColor="@color/greyLetters"
        android:fontFamily="@font/inter_18pt_regular" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/x"
        android:textColor="@color/greyLetters"
        android:fontFamily="@font/inter_18pt_regular"/>
</LinearLayout>