<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginBottom="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/inter_18pt_medium"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_18pt_bold"
                    android:text="@string/sampleName"
                    android:textColor="@color/blackBoldLetters"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView235"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/emailColon"
                        android:textColor="@color/blackBoldLetters" />

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/sampleEmail"
                        android:textColor="@color/greyLetters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView237"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/adminContactNumber"
                        android:textColor="@color/blackBoldLetters" />

                    <TextView
                        android:id="@+id/userContactNum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/sampleContact"
                        android:textColor="@color/greyLetters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView239"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/passwordColon"
                        android:textColor="@color/blackBoldLetters" />

                    <TextView
                        android:id="@+id/userPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/passwordSample"
                        android:textColor="@color/greyLetters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView241"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/ban"
                        android:textColor="@color/blackBoldLetters" />

                    <TextView
                        android:id="@+id/userBan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/banFalse"
                        android:textColor="@color/greyLetters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView243"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/role"
                        android:textColor="@color/blackBoldLetters" />

                    <TextView
                        android:id="@+id/userRole"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:text="@string/admin"
                        android:textColor="@color/greyLetters" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/inter_18pt_medium"
                    android:text="@string/edit"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/userDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_18pt_medium"
                    android:text="@string/delete"
                    android:textColor="@color/maroon_cancelBtn" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>