<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginHorizontal="5dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/addonImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/karaage" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inriasans_bold"
                android:textSize="15sp"
                android:textColor="@color/blackBoldLetters"
                android:text="@string/chickenKaraage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/quantity_background"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp">

                    <TextView
                        android:id="@+id/minusBtnAddon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minusSign"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/quantityValueAddon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/zero"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/addBtnAddon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plusSign"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/pesoSignChickenKaraage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:textColor="@color/blackBoldLetters"
                android:text="@string/pesoSign" />

            <TextView
                android:id="@+id/addonPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackBoldLetters"
                android:text="@string/ten" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>